// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser: json-stringify { format: false, filepath: 'Package.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: json-stringify { format: false, filepath: 'bar.js' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: json-stringify { format: false, filepath: 'composer.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: json-stringify { format: false, filepath: 'foo.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: json-stringify { format: false, filepath: 'package.JSON' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: json-stringify { format: false, filepath: 'package.json/composer.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: json-stringify { format: false, filepath: 'package-lock.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: json-stringify { format: false, filepath: undefined } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: json-stringify { format: true, filepath: 'foo/bar/package.json' } 1`] = `
"{
  "name": "",
  "version": "",
  "description": "",
  "keywords": [
    "C",
    "B",
    "A"
  ],
  "license": "",
  "author": "",
  "scripts": {
    "prebuild": "",
    "build": "",
    "postbuild": "",
    "dev": "",
    "lint": "",
    "start": "",
    "pretest": "",
    "test": "",
    "posttest": ""
  },
  "dependencies": {
    "A": "*",
    "B": "*"
  },
  "devDependencies": {
    "A": "*",
    "B": "*"
  },
  "peerDependencies": {
    "A": "*",
    "B": "*"
  },
  "optionalDependencies": {
    "A": "*",
    "B": "*"
  }
}
"
`;

exports[`parser: json-stringify { format: true, filepath: 'package.json' } 1`] = `
"{
  "name": "",
  "version": "",
  "description": "",
  "keywords": [
    "C",
    "B",
    "A"
  ],
  "license": "",
  "author": "",
  "scripts": {
    "prebuild": "",
    "build": "",
    "postbuild": "",
    "dev": "",
    "lint": "",
    "start": "",
    "pretest": "",
    "test": "",
    "posttest": ""
  },
  "dependencies": {
    "A": "*",
    "B": "*"
  },
  "devDependencies": {
    "A": "*",
    "B": "*"
  },
  "peerDependencies": {
    "A": "*",
    "B": "*"
  },
  "optionalDependencies": {
    "A": "*",
    "B": "*"
  }
}
"
`;

exports[`parser: undefined { format: false, filepath: 'Package.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: undefined { format: false, filepath: 'composer.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: undefined { format: false, filepath: 'foo.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": ["C", "B", "A"]
}
"
`;

exports[`parser: undefined { format: false, filepath: 'package.JSON' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: undefined { format: false, filepath: 'package.json/composer.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: undefined { format: false, filepath: 'package-lock.json' } 1`] = `
"{
  "license": "",
  "version": "",
  "devDependencies": {
    "B": "*",
    "A": "*"
  },
  "description": "",
  "dependencies": {
    "B": "*",
    "A": "*"
  },
  "scripts": {
    "posttest": "",
    "test": "",
    "start": "",
    "pretest": "",
    "build": "",
    "postbuild": "",
    "prebuild": "",
    "lint": "",
    "dev": ""
  },
  "peerDependencies": {
    "B": "*",
    "A": "*"
  },
  "author": "",
  "name": "",
  "optionalDependencies": {
    "B": "*",
    "A": "*"
  },
  "keywords": [
    "C",
    "B",
    "A"
  ]
}
"
`;

exports[`parser: undefined { format: true, filepath: 'foo/bar/package.json' } 1`] = `
"{
  "name": "",
  "version": "",
  "description": "",
  "keywords": [
    "C",
    "B",
    "A"
  ],
  "license": "",
  "author": "",
  "scripts": {
    "prebuild": "",
    "build": "",
    "postbuild": "",
    "dev": "",
    "lint": "",
    "start": "",
    "pretest": "",
    "test": "",
    "posttest": ""
  },
  "dependencies": {
    "A": "*",
    "B": "*"
  },
  "devDependencies": {
    "A": "*",
    "B": "*"
  },
  "peerDependencies": {
    "A": "*",
    "B": "*"
  },
  "optionalDependencies": {
    "A": "*",
    "B": "*"
  }
}
"
`;

exports[`parser: undefined { format: true, filepath: 'package.json' } 1`] = `
"{
  "name": "",
  "version": "",
  "description": "",
  "keywords": [
    "C",
    "B",
    "A"
  ],
  "license": "",
  "author": "",
  "scripts": {
    "prebuild": "",
    "build": "",
    "postbuild": "",
    "dev": "",
    "lint": "",
    "start": "",
    "pretest": "",
    "test": "",
    "posttest": ""
  },
  "dependencies": {
    "A": "*",
    "B": "*"
  },
  "devDependencies": {
    "A": "*",
    "B": "*"
  },
  "peerDependencies": {
    "A": "*",
    "B": "*"
  },
  "optionalDependencies": {
    "A": "*",
    "B": "*"
  }
}
"
`;
